--- a/source/_posts/19/07/01/190701m074556.md
+++ b/source/_posts/19/07/01/190701m074556.md
@@ -1,4 +1,5 @@
----title: 190701 ( Log table ) 2019-07 # 190701m074556
+---
+title: 190701 ( Log table ) 2019-07 # 190701m074556
 date: 2019-07-01 07:45:56
 ---
 
@@ -22,6 +23,8 @@ date: 2019-07-01 07:45:56
     <li><strong>2019-07-06:</strong> <a href="#id190706m065522">Section</a>.</li>
     <li><strong>2019-07-07:</strong> <a href="#id190707m062154">Section</a>.</li>
     <li><strong>2019-07-08:</strong> <a href="#id190708m062218">Section</a>.</li>
+    <li><strong>2019-07-09:</strong> <a href="#id190709m081302">Section</a>.</li>
+    <li><strong>2019-07-10:</strong> <a href="#id190710m072309">Section</a>.</li>
     <li><strong>2019-07-xx:</strong> <a href="#xx">Section</a>.</li>
   </ol>
 </div>
@@ -29,6 +32,7 @@ date: 2019-07-01 07:45:56
 <div class="h2">
   <h2>2019-07<a id="id190701m074557"></a></h2>
   <div class="kwCloud">
+    <div class="itm sl">{ Stoicism }</div>
     <div class="itm s2">Portfolio and Resume</div>
     <div class="itm s1">[ Art ]-[ graphic design ]</div>
     <div class="itm s1">Exercising</div>
@@ -42,6 +46,7 @@ date: 2019-07-01 07:45:56
     <div class="itm s1">{ Vue Loader }</div>
     <div class="itm s1">{ Vue } ,, assets path</div>
     <div class="itm s1">{ Vue } ,, { CSS Modules }</div>
+    <div class="itm s1">{ Webpack } ,, { resolve alias }</div>
   </div>
   <ol>
     <li><strong>By time:</strong>
@@ -83,6 +88,19 @@ date: 2019-07-01 07:45:56
           <ol>
             <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Portfolio page. First section's Modal and data logic.</li>
             <li><strong>Found my phone battery inflate because of constantly charging.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190708:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Finished Portfolio page. Doing some small tweaks everywhere.</li>
+            <li><strong>Sass:</strong> Starts to understand the real use case of <code>Sass</code>, not just saving variables and making some template, but making the complex code more manageable.</li>
+          </ol>
+        </li>
+        <li><strong>190709:</strong>
+          <ol>
+            <li><strong>( Stoicism ) { TedTalks } - "Everything happens for a reason"? It's a lie - Cancer Phase IV - Kate Bowler.</strong></li>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Finished About me page. Doing some small tweaks everywhere. // Start to filling real [ data ]-[ information ]. Spent some time thinking about the content. Taking screenshots of 3 projects.</li>
+            <li><strong>Dealing with assets path problem - { resolve alias }.</strong></li>
           </ol>
         </li>
       </ol>
@@ -347,13 +365,98 @@ date: 2019-07-01 07:45:56
   <h2>2019-07-08<a id="id190708m062218"></a></h2>
   <div class="kwCloud">
     <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s2">{ Sass }</div>
   </div>
   <ol>
+    <li><strong>( Color theory ) Adobe color wheel:</strong> <a href="https://color.adobe.com/create">Link</a>. Analogous, Monochromatic, complementary, Compound ... .</li>
+    <li><strong>{ Sass } ,, HSL function:</strong> <a href="https://wcc723.github.io/sass/2013/08/26/sass-hsl-funtion/">Link</a>.</li>
+    <li><strong>{ Sass } ,, { @mixin } ,, { @content }:</strong> <a href="https://ithelp.ithome.com.tw/articles/10156850">Link</a>.</li>
+    <li><strong>( Sass ) This is the real value of using Sass - reduce the [ repetitive ]-[ duplicate ] [ code ]-[ workflow ]:</strong> <a href="https://ithelp.ithome.com.tw/articles/10136641">Link</a>.</li>
+    <li><strong>{ Sass } ,, Using multiple conditions (AND, OR, NOT) in { if } statement:</strong> <a href="https://stackoverflow.com/questions/17225229/using-multiple-conditions-and-in-sass-if-statement">Link</a>.</li>
+    <li><strong>{ Sass } ,, powerful of { @function } - keep concatenating onto same variable:</strong> <a href="https://stackoverflow.com/questions/31239831/function-v-s-mixin-in-sass-lang-which-one-to-use">Link</a>, see first answer, so you can concatenate like <code>$val: #{$val}, #{$i}px #{$i}px #{$color};</code>.</li>
+    <li><strong>{ Sass } ,, when is the use case of { @extend }? And why using { placeholder selectors } (%):</strong> <a href="https://www.sitepoint.com/sass-features-may-never-tried/">Link</a>.</li>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>06:10 Wake up, misc.</strong></li>
         <li><strong>06:23 Uploading blog.</strong></li>
-        <li><strong>06:?? Designing Resume site:</strong> Modal ,, data logic.</li>
+        <li><strong>06:30 Misc.</strong></li>
+        <li><strong>06:36 Designing Resume site:</strong> Modal ,, style.</li>
+        <li><strong>08:10 Understanding and testing { line-height } and { vertical-align }.</strong></li>
+        <li><strong>09:22 Designing Resume site:</strong> Modal ,, style.</li>
+        <li><strong>09:50 Designing Resume site:</strong> Modal ,, data logic. Finished.</li>
+        <li><strong>11:00 Testing Jquery and { vue }-{ refs }:</strong> And apply scroll effect onto Resume site.</li>
+        <li><strong>12:20 Grocery, cooking.</strong></li>
+        <li><strong>13:20 Eating, watching video.</strong></li>
+        <li><strong>14:40 Take a nap.</strong></li>
+        <li><strong>15:05 Designing Resume site:</strong> Portfolio page, second section ,, designing svg shape.</li>
+        <li><strong>17:30 Designing Resume site:</strong> Portfolio page, second section ,, making button onclick then jump to external link.</li>
+        <li><strong>18:30 Misc.</strong></li>
+        <li><strong>18:40 Designing Resume site:</strong> Portfolio page, misc visual tweaks, testing <code>Sass</code>.</li>
+        <li><strong>20:35 Cooking.</strong></li>
+        <li><strong>21:10 Eating, learning { Sass }.</strong></li>
+        <li><strong>21:37 Brushing teeth.</strong></li>
+        <li><strong>21:46 Learning { Sass }.</strong></li>
+        <li><strong>22:57 Misc.</strong></li>
+        <li><strong>23:55 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-09<a id="id190709m081302"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s2">{ Stoicism }</div>
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s2">{ Webpack } ,, { resolve alias }</div>
+    <div class="itm s1">{ Webpack }</div>
+    <div class="itm s1">{ Vue }</div>
+  </div>
+  <ol>
+    <li><strong>( Stoicism ) { TedTalks } - "Everything happens for a reason"? It's a lie - Cancer Phase IV - Kate Bowler:</strong> <a href="https://youtu.be/DTcJmIbn5nw">Link</a>. You dont't control, most things is out of your control. Only thing you can control is virture. Always try to hold the optimism in the pessimism.</li>
+    <li><strong>( Vue ) ( Webpack ) How to config Webpack in a Vue project?:</strong> <a href="https://cli.vuejs.org/zh/guide/webpack.html#%E7%AE%80%E5%8D%95%E7%9A%84%E9%85%8D%E7%BD%AE%E6%96%B9%E5%BC%8F">Link</a>. <a href="https://cli.vuejs.org/zh/config/#configurewebpack">configureWebpack</a> is one of the options of <code>vue.config.js</code> config file, so we use <code>configureWebpack</code> to do all the config of Webpack, instead of configuring "lower level" Webpack config file directly.</li>
+    <li><strong>( Webpack ) { resolve.alias } - how does "@/..." works and be config?:</strong> <a href="https://stackoverflow.com/questions/42749973/es6-import-using-at-sign-in-path-in-a-vue-js-project-using-webpack">Link1</a>, <a href="https://webpack.js.org/configuration/resolve/#resolvealias">link2</a>. // <a href="https://blog.csdn.net/panchang199266/article/details/90145638">vue-cli3 設定 webpack resolve alias</a> (簡單易懂，<strong>試過了的確可以正常運作</strong>)，照做，把 <code>vue.config.js</code> 裡面增加一個 webpack 專用的 option (object): <code>chainWebpack: (config) =&gt; { config.resolve.alias .set('@', resolve('src')) .set('@myThinggg',resolve('src/assets/any/custom/path/you/want')); }</code>，然後你就可以在 Vue component 裡面使用 <code>&lt;img src="@myThinggg/thatTargetImageFile.jpg"&gt;</code> (<strong>注意是 "@"</strong>)， 以及 <code>background-image: url("~@myThinggg/thatTargetImageFile.jpg");</code> (<strong>注意是 "~@"</strong>)。關於那個 "~" symbol，好像是在 sass 裡面都要這樣寫，包括引用其它 sass file。但奇怪，我之前都沒有加這個還是可以用，不知道為什麼。</li>
+    <li><strong>( Vue ) ( Vue-cli ) { vue inspect &gt; config.js }:</strong> <a href="https://forum.vuejs.org/t/how-to-configure-vue-cli-3-to-leverage-webpack-root-folder-aliases/40943/10">Found from here</a>, you can found a bunch of webpack config (including resolve alias settings) used by current vue project.</li>
+    <li><strong>{ Vue } ,, when to put image in { assets } or { static} directory? - What does it related to webpack?:</strong> <a href="https://vuejs-templates.github.io/webpack/static.html">Link</a>.</li>
+    <li><strong>( Vue ) Dealing with assets path problem again - sass - { resolve alias }:</strong>
+      <ol>
+        <li><strong>The "~@" alias:</strong> Related to <code>&lt;style lang="sass"&gt;</code> block, not <code>template</code> or <code>script</code> block. // For the backgroud-image url path, I found I can't use <code>url('@/assets/myImg.png')</code> or <code>url('~/assets/myImg.png')</code>, but using <code>url('~@/assets/myImg.png')</code> works, I don't know why, found at <a href="https://stackoverflow.com/questions/51621458/for-handling-assets-in-vue-js-not-working/52321720">here</a> and <a href="https://stackoverflow.com/questions/42749973/es6-import-using-at-sign-in-path-in-a-vue-js-project-using-webpack">here</a> ,, answer of Estus Flask ,, comment of Consta Gorgan (--{ When using vue-cli v3+ you should use ~@ to reference src folder. E.g.: $font-path: '~@/assets/fonts/'; }--). // And <a href="https://blog.csdn.net/weixin_43343144/article/details/88668787">here</a> says --{ 特別注意：如果在scss中使用@別名則需要加 "~" 號，比如在src目錄下有一個var.scss文件，其他文件引用時則需寫成 <code>@import "~@/var.scss";</code>，（scss中加了 "~@" 就不會報錯了）}--, and <a href="https://blog.csdn.net/weixin_28717693/article/details/83240164">here</a> also says --{ 在css中使用要加上一個 **~** }--.</li>
+        <li><strong>About { webpack },{ file-loader },{ url-loader }:</strong> I search a lot regarding this "path can't resolved issue", and though I still don't know the correct practice (though using <code>~@/...</code> works), I think the direction is toward { webpack },{ file-loader },{ url-loader }, especially <code>webpack</code>, people mentioned it a lot regarding to solve this problem. This might be nothing to do with <code>Vue</code>, or <code>Sass</code> it self, since I fonud <a href="https://ithelp.ithome.com.tw/articles/10207330">this Nuxt article</a> ,, section <u>Nuxt 如何編譯靜態資源？</u>, it mentioned: --{ 放在 assets 資料夾下的檔案，引用前先經過 Webpack 編譯 更精確點講「透過 vue-loader 以及副檔名對應的 loader」編譯 ; Vue File 經 vue-loader 拆出 &lt;template&gt;、&lt;script&gt;、&lt;style&gt;，交由對應 loader 進一步處理 ; 樣式經過 css-loader ; 照片、其他檔案經過 file-loader、url-loader 處理。 }-- </li>
+      </ol>
+     </li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>08:05 Wake up.</strong></li>
+        <li><strong>08:14 Bathroom.</strong></li>
+        <li><strong>08:30 Uploading blog.</strong></li>
+        <li><strong>08:40 Designing Resume site:</strong> A bit refactoring css, using <code>Sass</code> <code>@mixin</code> to condense <code>linear-gradient</code> code.</li>
+        <li><strong>09:10 Designing Resume site:</strong> About me page.</li>
+        <li><strong>09:23 Dealing with assets path problem - { resolve alias }:</strong> Though spending much time on learning webpack stuff, but this is still a "must do" investment, if I don't lean it, this problem will just come back again and again in the future.</li>
+        <li><strong>12:12 Cooking, keep working.</strong></li>
+        <li><strong>13:00 Eating.</strong></li>
+        <li><strong>14:16 Taking a nap.</strong></li>
+        <li><strong>14:41 Reading article (story) about jobs.</strong></li>
+        <li><strong>15:15 Designing Resume site:</strong> About me page.</li>
+        <li><strong>15:48 Designing Resume site:</strong> Start to filling real [ data ]-[ information ]. Spent some time thinking about the content. Taking screenshots of 3 projects.</li>
+        <li><strong>20:30 Cooking, working.</strong></li>
+        <li><strong>21:40 Eating, watching video.</strong></li>
+        <li><strong>23:05 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-10<a id="id190710m072309"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>07:20 Wake up.</strong></li>
+        <li><strong>07:25 Uploading blog.</strong></li>
+        <li><strong>07:?? Portfolio and Resume:</strong> Doing Resume PDF version.</li>
         <li><strong>?? Cooking.</strong></li>
         <li><strong>?? Eating.</strong></li>
       </ol>
